--- a/CatalogoApi/appsettings.json
+++ b/CatalogoApi/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     "CatalogoDb": "mongodb://localhost:27017"
+    //"CatalogoDb": "mongodb+srv://cerveja:cerveja@cluster0-rpi2t.gcp.mongodb.net/test?retryWrites=true"
   },
   "Logging": {
     "IncludeScopes": false,
